--- a/aula2.html
+++ b/aula2.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./src/css/style.css">
 </head>
 <body>
-    <button id="menu-btn">&lt;</button>
+    <button id="menu-btn">X</button>
     <nav id="menu">
         <ul id="menu-ul">
         </ul>
