Adicionado GitHub Pages na aula 7

--- a/aula7.html
+++ b/aula7.html
@@ -77,6 +77,20 @@
 
             <p><strong>9 - Repita os passoas de 4 a 8:</strong> agora você pode modificar e criar outros arquivos, verificar o status, adicionar arquivos ao stage, dar commit nos arquivos do stage e enviar as mudanças pro repositório online. E repitir isso várias vezes enquanto você cria seus websites. Os passos 1 a 3 só precisam ser repetidos no começo da aula. Não se preocupe em decorar os passos, com a prática você irá se acostumar, e você sempre pode pedir ajuda ao professor ou a um colega, e também ajudar um colega é uma ótima maneira de aprender.</p>
 
+
+            <h3>GitHub Pages</h3>
+
+            <p>GitHub Pages é uma forma de colocar seu website online na web. Vamos aprender como fazer isso agora.</p>
+
+            <p>Primeiramente é preciso que o seu repositório tenha um documento html com o nome index.html pois é o nome padrão que o GitHub procura para usar como página inicial.</p>
+
+            <p>Agora vá até o seu repositório no GitHub, você precisa estar logado.</p>
+
+            <p>No seu repositório você vê um menu abaixo do nome do repositório, clique na opção <strong>Settings</strong>. Isso abrirá uma página com várias opções de configuração.</p>
+
+            <p>Role a página para baixo até achar uma configuração chamada <strong>GitHub Pages</strong>. Nela você terá um seletor que está na opção "None". Mude essa opção para "master branch". A página atualizará automaticamente, e se você rolar novamente até a configuração GitHub Pages você verá o link para seu website. Pode ser que demore alguns minutos para que o seu site esteja funcionando, seja paciente.</p>
+
+
         </article>
     </main>
 
