--- a/aula7.html
+++ b/aula7.html
@@ -19,7 +19,7 @@
     <main>
         <article>
 
-            <h2>Git e GitHub</h2>
+            <h2>Aula 7 - Git e GitHub</h2>
 
             <h3>Git</h3>
 
