--- a/aula7.html
+++ b/aula7.html
@@ -27,14 +27,14 @@
 
             <p>Git possui várias funcionalidades, não aprenderemos todas, apenas as essenciais por agora. Porém com o passar do tempo outras necessidades podem surgir e você pode pesquisar mais sobre as capacidades do Git.</p>
 
-            <p>Como qualquer outro programa, Git precisa ser instalado em seu computador. Para ver as instruções de como instalar entre no <a class="link" href="https://git-scm.com/">site oficial do git</a>.</p>
+            <p>Como qualquer outro programa, Git precisa ser instalado em seu computador. Para ver as instruções de como instalar entre no <a href="https://git-scm.com/">site oficial do git</a>.</p>
 
 
             <h3>GitHub</h3>
 
-            <p><a href="https://github.com/" class="link">GitHub</a> é um website onde é possível criar repositórios Git online. A vantagem de ter um repositório online é que você pode acessá-lo de qualquer computador conectado a internet. Além disso, se você estiver trabalhando com outras pessoas, elas também podem acessar o repositório.</p>
+            <p><a href="https://github.com/" GitHub</a> é um website onde é possível criar repositórios Git online. A vantagem de ter um repositório online é que você pode acessá-lo de qualquer computador conectado a internet. Além disso, se você estiver trabalhando com outras pessoas, elas também podem acessar o repositório.</p>
 
-            <p>O primeiro passo para começar a usar o GitHub é <a href="https://github.com/join" class="link">criar uma conta no site.</a></p>
+            <p>O primeiro passo para começar a usar o GitHub é <a href="https://github.com/join" criar uma conta no site.</a></p>
 
 
             <h3>Criando um novo repositório</h3>
