typos, added links to index

--- a/aula4.html
+++ b/aula4.html
@@ -188,14 +188,14 @@
                 </code>
             </pre>
 
-            <p>3 - Resultado:</p>
+            <p>Resultado:</p>
 
             <p style="color: red;">Este texto será vermelho!</p>
             <p>Este texto não será vermelho!</p>
 
 
 
-            <h4>4 - Class</h4>
+            <h4>3 - Class</h4>
 
             <p>O seletor por Classe utiliza o atributo <strong>class</strong> em uma tag HTML para selecionar aquele elemento. O atributo class não precisa deve ser único, ou seja, podem existir vários elemento com class="minhaClasse".</p>
 
@@ -234,7 +234,7 @@
             <p>Este texto não será vermelho!</p>
 
 
-            <h4>5 - Universal</h4>
+            <h4>4 - Universal</h4>
 
             <p>O seletor universal, como o próprio nome sugere, seleciona todos elementos HTML da página, independente de tag, clase ou id, sem exceção.</p>
 
