--- a/aula8.html
+++ b/aula8.html
@@ -220,7 +220,7 @@
 
             <h3>Altura e Largura, min e max</h3>
 
-            <p>Além de height e width temos outras 4 propriedades relacionadas a altura e largura: <strong>min-widht, max-width, min-height, max-height.</strong> Os nomes são bem auto-explicativos, min-width é a largura mínima, max-width é a largura máxima, min-height é a altura mínima, e max-height é a altura máxima. Essas propriedades serão mais importantes quando estudarmos design responsivo. Tente criar um elemento com essas propriedades e mudar o tamanho da janela do seu navegador para ver o que acontece.</p>
+            <p>Além de height e width temos outras 4 propriedades relacionadas a altura e largura: <strong>min-width, max-width, min-height, max-height.</strong> Os nomes são bem auto-explicativos, min-width é a largura mínima, max-width é a largura máxima, min-height é a altura mínima, e max-height é a altura máxima. Essas propriedades serão mais importantes quando estudarmos design responsivo. Tente criar um elemento com essas propriedades e mudar o tamanho da janela do seu navegador para ver o que acontece.</p>
 
             <h3>Overflow</h3>
 
