--- a/aula9.html
+++ b/aula9.html
@@ -25,7 +25,7 @@
 
             <h3>Unidades absolutas</h3>
 
-            <p>Unidades absolutas são aquelas que não são relativas a nada, sempre são do mesmo tamanho, por exemplo 1px sempre será do mesmo tamanho. Além de px temos nessa categoria centímetros (cm), milimetros (mm), polegadas (in), entre outras. Raramente usamos outra unidade absoluta além de pixels (px). Para estudar mais sobre outras unidades absolutas clique <a href="https://developer.mozilla.org/pt-BR/docs/Learn/CSS/Building_blocks/Values_and_units#Lengths">aqui</a>.</p>
+            <p>Unidades absolutas são aquelas que não são relativas a nada, sempre são do mesmo tamanho, por exemplo 1px sempre será do mesmo tamanho. Além de px temos nessa categoria centímetros (cm), milímetros (mm), polegadas (in), entre outras. Raramente usamos outra unidade absoluta além de pixels (px). Para estudar mais sobre outras unidades absolutas clique <a href="https://developer.mozilla.org/pt-BR/docs/Learn/CSS/Building_blocks/Values_and_units#Lengths">aqui</a>.</p>
 
             <h3>Unidades relativas</h3>
 
@@ -65,7 +65,7 @@
             <p>Essas unidades relativas serão muito importantes quando aprendermos design responsivo, pois podemos mudar o tamanho da fonte, altura, largura e outros em relação ao tamanho da tela.</p>
 
 
-            <h3>Porcentgem</h3>
+            <h3>Porcentagem</h3>
 
             <p>Outra unidade de medida é a porcentagem (%). Ela é relativa a medida da mesma propriedade do elemento pai. Veja o exemplo:</p>
 
