--- a/index.html
+++ b/index.html
@@ -25,6 +25,22 @@
             <h3>Professor: Douglas Mariano Valero</h3>
             <p>E-mail: douglasmv@ymail.com</p>
 
+            <h3>Recados:</h3>
+
+            <p><a href="./aula5.html#tarefa_de_casa" class="link">Respostas da Tarefa de Casa</a></p>
+
+            <h3>Links Úteis</h3>
+
+            <p><a href="https://www.caelum.com.br/apostila-html-css-javascript/">Apostila de HTML, CSS e JS</a></p>
+            <p><a href="https://diveintohtml5.com.br/">Livro de HTML</a></p>
+            <p><a href="http://pt-br.learnlayout.com/">Aprenda Layout com CSS</a></p>
+            <p><a href="https://github.com/braziljs/eloquente-javascript">Livro: JavaScript Eloquente</a></p>
+            <p><a href="http://stack.desenvolvedor.expert/">Full Stack JS</a></p>
+            <p><a href="https://developer.mozilla.org/pt-BR/docs/Web"></a>MDN Docs</p>
+            <p><a href="https://www.tutorialspoint.com/tutorialslibrary.htm">Tutoriais Diversos (Inglês)</a></p>
+            <p><a href="https://www.freecodecamp.org/">Free Code Camp (Inglês)</a></p>
+            <p><a href="https://www.codecademy.com"></a>Codecademy (Inglês)</p>
+
         </article>
     </main>
 
