--- a/aula1.html
+++ b/aula1.html
@@ -18,6 +18,167 @@
 
     <main>
         <article>
+            <h2>Aula 1 - A Web</h2>
+
+
+            <h3>Rede de computadores</h3>
+
+            <p>Duas ou mais máquinas interligadas de forma que seja possível trocar informações.</p>
+
+
+            <h3>Internet</h3>
+
+            <p>É um sitema global de Redes.</p>
+            <p>Várias Redes interligadas trocando informações entre si.</p>
+            <p>E-mail; Arquivos; Acesso Remoto; Sites na Web</p>
+
+
+            <h3>Protocolos</h3>
+
+            <p>Padrões para troca de informações</p>
+            <p>HTTP – Hypertext Transfer Protocol</p>
+            <p>HTTPS – HTTP Secure</p>
+            <p>Outros exemplos: DHCP; DNS; FTP; SMTP; POP; SSH; TLS/SSL; IP</p>
+
+
+            <h3>Endereço IP</h3>
+
+            <p>IPv4: 192.168.0.1 (32 bits)</p>
+            <p>IPv6: 2001:DB8:FE01::1 (128 bits)</p>
+
+
+            <h3>Quem tem endereço IP?</h3>
+
+            <p>Tudo que está conectado em uma rede possui um endereço IP. (PC; Smart Phone; Servidores; Smart TV; Roteadores; Geladeira?)</p>
+            <p>IP deve ser único dentro de uma rede.</p>
+            <p>Um IP na rede mundial (Internet) conecta toda rede local a Internet.</p>
+
+
+            <h3>Cliente</h3>
+
+            <p>São os dispositivos conectados a rede que requisitam e enviam dados aos Servidores.</p>
+            <p>São os usuários.</p>
+            <p>Computadores Pessoais (PC); Notebooks; Smart Phones; Tablets; Smart TV.</p>
+
+
+            <h3>Servidores</h3>
+
+            <p>Computadores que fornecem serviços aos clientes, exemplos: E-mails; Acesso Remoto; Bancos de Dados; Backup; Resolver Nomes (DNS); Servir Sites (Web Server)</p>
+
+
+            <h3>DNS</h3>
+
+            <p>Domain Name System (Sistema de Nomes de Domínio)</p>
+            <p>Converte nomes de fácil leitura para Pessoas em nomes de fácil leitura para Computadores (e vice-versa).</p>
+            <p>Exemplo: fatecsumare.com.br = 191.252.51.37</p>
+
+
+            <h3>Servidor Web</h3>
+
+            <p>Recebe e responde requisições HTTP</p>
+            <p>Serve as páginas Web para os clientes</p>
+            <p>A Web é uma das várias maneiras de trocar informações pela Internet</p>
+
+
+            <h3>Frontend x Backend</h3>
+
+            <p>Um Website possui duas partes: Frontend e Backend</p>
+
+
+            <h3>Frontend</h3>
+
+            <p>É executado no Cliente usando um Navegador (Chrome; Firefox; Safari; Internet Explorer).</p>
+            <p>Os arquivos são recebidos do Servidor Web e interpretados pelo Cliente.</p>
+            <p>Responsável pela apresentação do website, interação do cliente com o site.</p>
+            <p>HTML – Hypertext Markup Language (Linguagem de Marcação de Hipertexto)</p>
+            <p>CSS - Cascading Style Sheets (Folhas de Estilo em Cascatas)</p>
+            <p>JS - JavaScript</p>
+            <p>Vantagem: existe um padrão de linguagens (HTML, CSS, JS)</p>
+            <p>Desvantagem: vários navegadores diferentes, nem sempre tudo funciona em todos (Internet Explorer principalmente)</p>
+
+
+            <h3>Backend</h3>
+
+            <p>É executado no Servidor.</p>
+            <p>Pode enviar e receber conteúdo dos clientes dinamicamente.</p>
+            <p>Banco de Dados (Persistência)</p>
+            <p>Autenticação e Controle de Acesso</p>
+            <p>Segurança (Validação de dados)</p>
+            <p>Vantagem: só precisa funcionar em um computador (o seu servidor web)</p>
+            <p>Desvantagem: muitas opções de linguagens (PHP; Node.js; Ruby; Python; JAVA; Go; Rust; C; C++; C#; entre outras...), impossível ser bom em todas, desições devem ser tomadas.</p>
+
+
+            <h3>Tipos de Websites</h3>
+
+            <p>Estático: somente Frontend; Servidor serve sempre os mesmos arquivos.</p>
+            <p>Dinâmico: as páginas são criadas dinâmicamente no Servidor e depois são enviadas para o Cliente.</p>
+            <p>SPA (Single Page Application): Uma página padrão é enviada ao Cliente, e é modificada no Cliente por arquivos de dados enviados pelo Servidor.</p>
+
+
+            <h3>Profissionais</h3>
+
+            <p>Administrador de Servidores Web</p>
+            <p>Web Designer</p>
+            <p>Desenvolvedor Frontend</p>
+            <p>Desenvolvedor Backend</p>
+            <p>Desenvolvedor Full Stack</p>
+            <p>DevOps</p>
+
+
+            <h3>Administrador de Servidor Web</h3>
+
+            <p>Geralmente é Administrador da Rede toda.</p>
+            <p>Responsável por colocar o Website na Internet.</p>
+            <p>Deve ter conhecimentos de Rede, Sistemas Operacionais, Protocolos, Segurança, Hardware, entre outros.</p>
+
+
+            <h3>Web Designer</h3>
+
+            <p>Cria a parte visual do Website</p>
+            <p>Deve ser criativo, entender de elementos de Design: cores, formas, alinhamento, tipografia, etc.</p>
+            <p>Deve criar uma interface intuitiva para o usuário.</p>
+            <p>Photoshop; xD; Illustrator; GIMP.</p>
+            <p>Precisa conhecer um pouco de Frontend também: HTML; CSS; JS.</p>
+
+
+            <h3>Desenvolvedor Frontend</h3>
+
+            <p>Cria a parte do Website que o cliente interage.</p>
+            <p>Deve criar funcionalidades intuitivas, fáceis de usar, acessíveis e responsivas.</p>
+            <p>Deve conhecer bem HTML, CSS e JS.</p>
+            <p>Deve conhecer algum Framework: ReactJS; VueJS; Angular; Bootstrap; jQuery; entre outros.</p>
+
+
+            <h3>Desenvolvedor Backend</h3>
+
+            <p>Cria a parte do Website que é responsável por lidar com as informações.</p>
+            <p>Autenticação; Sessão; Controle de Acesso; Banco de Dados; Validação;</p>
+            <p>Deve conhecer uma linguagem de programação: PHP; Node.js; C#; JAVA; Python; Ruby; entre outras.</p>
+
+
+            <h3>Desenvolvedor Fullstack</h3>
+
+            <p>É desenvolvedor Frontend e Backend</p>
+            <p>Participa de todo processo de desenvolvimento, conhece o produto do início ao fim.</p>
+            <p>Deve ter habilidades lógicas e criatividade.</p>
+
+
+            <h3>DevOps</h3>
+
+            <p>Dev = Devloper = Desenvolvedor.</p>
+            <p>Ops = Operations = Operações.</p>
+            <p>Desenvolver (programar)</p>
+            <p>Administração de Servidor</p>
+            <p>Controle de Qualidade</p>
+            <p>Processos Automatizados</p>
+
+
+            <h3>Exercícios</h3>
+
+            <p>O que é Internet? E Web?</p>
+            <p>O que é um Cliente? E um Servidor?</p>
+            <p>O que é Frontend? E Backend?</p>
+            <p>Diga quais funções abaixo pertencem ao Frontend e quais pertencem ao Backend: banco de dados; posição do texto; autenticação; dimensionamento das imagens; sessão; validação de dados; botões e links clicáveis.</p>
 
         </article>
     </main>
