--- a/aula2.html
+++ b/aula2.html
@@ -19,6 +19,200 @@
     <main>
         <article>
 
+            <h2>Aula 2 - Design</h2>
+
+
+            <h3>Design</h3>
+
+            <p>Design é uma forma de comunicar uma ideia ou conceito, usando processos, elementos e princípios.</p>
+            <p>Design deve comunicar uma ideia claramente, sem interpretaçoes.</p>
+            <p>Design deve ter uma função, um objetivo.</p>
+
+
+            <h3>Tipos de Design</h3>
+
+            <p>Design Gráfico: criar logos; panfletos; e outras coisas geralmente para impressão.</p>
+            <p>Design de Produto: criar produtos que possuem alguma utilidade.</p>
+            <p>Web Design: criar websites digitalmente.</p>
+
+
+            <h3>O que um Designer faz?</h3>
+
+            <p>Um Designer cria uma solução visual para um problema através de um projeto.</p>
+            <p>Cria um conceito, elabora uma solução</p>
+            <p>Pesquisa, cria alternativas, protótipos, desenvolve, testa e finaliza.</p>
+
+
+            <h3>Do que um Designer precisa?</h3>
+
+            <p>Criatividade</p>
+            <p>Sede de conhecimento</p>
+            <p>Ser flexível, meste aberta</p>
+            <p>Se manter atualizado</p>
+            <p>Ser capaz de transmitir um conceito no papel (não precisa ser um artista)</p>
+            <p>"Rascunhos" são mais rápidos</p>
+            <p>A prática leva a (quase) perfeição</p>
+
+
+            <h3>Processos de Design</h3>
+
+            <p>Projeto, pensar em como desenvolver</p>
+            <p>Sem Processos não há Design</p>
+            <p>Sem motivos e objetivos não é Design, é arte</p>
+            <p>Dois modelos principais: Modelo Racional; Modelo Basseado em Ação.</p>
+
+
+            <h3>Benefícios de Processos de Design</h3>
+
+            <p>Dá valor ao seu Design</p>
+            <p>Ajuda a apresentar o seu trabalho</p>
+            <p>Evita mudanças sem motivo real</p>
+            <p>Mantém organização e produtividade</p>
+            <p>Estabelece credibilidade e valor a marca ou produto</p>
+
+
+            <h3>Modelo Racional</h3>
+
+            <p>Tentar otimizar um design escolhido de acordo com limitações e objetivos conhecidos.</p>
+            <p>O Processo de Design é planejado e entendido em termos de uma sequência de estágios.</p>
+            <p>O Design é informado por pesquisa e conhecimento de maneira previsível e controlada.</p>
+
+
+            <h3>Estágios do Modelo Racional</h3>
+
+            <p>Pré-Produção: briefing, pesquisa, análise de informações, especificação de problemas, propostas de soluções.</p>
+            <p>Durante a Produção: desenvolvimento da solução, testes.</p>
+            <p>Pós-Produção: implementar a solução, avaliação e conclusão.</p>
+            <p>Redesign: pode ser feito pré, durante ou pós produção.</p>
+            
+
+            <h3>Modelo Baseado em Ação</h3>
+
+            <p>Designs candidatos são gerados a partir de criatividade e emoções</p>
+            <p>O Processo de Design é improvisado</p>
+            <p>Não há uma sequência de estágios, tudo ocorre ao mesmo tempo (análise, implementação, soluções, pesquisa)</p>
+            <p>Pesquisa e conhecimento serve para aprimorar o bom senso dos Designers.</p>
+            <p>Deve ser evitado por iniciantes.</p>
+
+
+            <h3>Os 6 Elementos de Design</h3>
+
+            <p>Elementos de Design ajudam a
+                comunicar uma mensagem</p>
+            <p>Existem 6 Elementos de Design:</p>
+
+            <ol>
+                <li>Linha</li>
+                <li>Forma</li>
+                <li>Cor</li>
+                <li>Textura</li>
+                <li>Massa</li>
+                <li>Espaço</li>
+            </ol>
+
+
+            <h3>Linha</h3>
+
+            <p>Pode ser: curta ou longa; reta ou curva; grossa ou fina; contínua, traçada ou pontilhada; horizontal, vertical, diagonal ou tri-dimensional;</p>
+            <p>Usada para dividir seções, direcionar a visão do usuário para algo.</p>
+            <p>Diferentes tipos de linha geram diferentes tipos de movimento com os olhos.</p>
+
+
+            <h3>Forma</h3>
+
+            <p>Pode ser um círculo, quadrado, retângulo, ou qualquer objeto abstrato, como uma foto.</p>
+            <p>Um bloco de texto também pode ser considerado uma forma.</p>
+            <p>Design minimalista = Formas simples</p>
+            <p>Arredondadas = natureza, movimento</p>
+            <p>Quadradas = estruturas, estático</p>
+
+
+            <h3>Cor</h3>
+
+            <p>É muito importante em Design</p>
+            <p>Pode ser sutil, chamativa ou provocar emoções e sensações</p>
+            <p>Influencia o subconsciente</p>
+            <p>Cria contraste, chama atenção, sensação de profundidade, ênfase, e muda a nossa relação com um objeto.</p>
+
+
+            <h3>Textura</h3>
+
+            <p>Pode complementar e fortalecer uma mensagem</p>
+            <p>Elementos maiores e mais detalhes são mais agressivas, chmativas</p>
+            <p>Elementos menores e menos detalhes são mais delicadas</p>
+            <p>Complementa o design, reforça o conceito visual</p>
+            <p>Se mal usada pode criar ruídos desnecessários</p>
+
+
+            <h3>Massa</h3>
+
+            <p>É o tamanho físico ou visualmente observável. É relativo.</p>
+            <p>Um outdoor com pouco conteúdo pode ser leve. Um cartão de visitas com muito conteúdo aparenta ser pesado.</p>
+            <p>Textos longos com bom espaço entre as linhas é mais leve de se ler do que um texto pequeno com letras grandes e em negrito.</p>
+
+
+            <h3>Espaço</h3>
+
+            <p>Espaço em “branco” ajuda a focar naquilo que é importante, minimalista (menos é mais)</p>
+            <p>Falta de espaço em branco pode fazer a mensagem principal se perder no meio da multidão de informações</p>
+            <p>Espaço em branco não é necessariamente branco, apenas um espaço sem elementos notáveis</p>
+
+
+            <h3>Princípios de Design</h3>
+
+            <p>São características que ajudam a comunicar uma mensagem</p>
+            <p>Podem ser aplicados em qualquer projeto, mas não necessariamente todos de uma vez</p>
+            <p>A maneira que são usados determinam quão eficiente e atrativo é o Design.</p>
+            <p>São 5: Alinhamento; Equilibrio; Contraste; Proximidade; Consistência.</p>
+
+
+            <h3>Alinhamento</h3>
+
+            <p>Dá ordem ao caos, ajuda a organizar itens similares, cria grupos e conexões visuais</p>
+            <p>Bom alinhamento passa despercebido</p>
+            <p>Desalinhamento (intencional ou não) é visivelmente perceptível</p>
+            <p>Desalinhamento intencional pode ser usado para destacar um elemento</p>
+
+
+            <h3>Equilíbrio</h3>
+
+            <p>Distribuir bem os elementos de acordo com a sua massa cria um equilíbrio visual.</p>
+            <p>Desequilibrar os elementos (intencionalmente ou não) cria um destaque de atenção para o local de maior concentração de massa.</p>
+
+
+            <h3>Contraste</h3>
+
+            <p>Contrate ocorre quando dois ou mais elementos são diferentes entre si, em relação a cor, tamanho, forma, etc.</p>
+            <p>Quanto maior a diferença maior o contraste.</p>
+            <p>Contraste precisa ser óbivo, ou parece um erro.</p>
+            <p>Pode ser usado para destacar, chamar a atenção do usuário.</p>
+            <p>Cuidado: contraste demais pode sobrecarregar o design.</p>
+
+
+            <h3>Proximidade</h3>
+
+            <p>Formas, tamanhos e posição dos elementos criam associações entre eles, agrupando-os, dando significado.</p>
+            <p>Quanto mais “próximos” mais semelhantes, quanto mais “distantes” mais diferentes.</p>
+
+
+            <h3>Consistência</h3>
+
+            <p>Também chamado de repetição.</p>
+            <p>Ajuda a manter a ordem.</p>
+            <p>Seguir um padrão cria uma consistência visual que facilita a identificação dos elementos.</p>
+            <p>Ajuda o usuário a saber onde ele está e o que ele está vendo.</p>
+
+
+            <h3>Exercício</h3>
+
+            <p>Procure elementos (linha, forma, cor,
+                textura, massa e espaço) e princípios
+                (alinhamento, equilíbrio, contraste,
+                proximidade, consistência) de Design
+                em Websites modernos.</p>
+            <p>Onde encontrar bons exemplos:</p>
+            <p><a href="https://webdesign-inspiration.com" target="_blank">Webdesign Inspiration</a></p>
+            <p><a href="https://bestwebsite.gallery" target="_blank">Best Website</a></p>
         </article>
     </main>
 
