--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
             <p><a href="http://pt-br.learnlayout.com/">Aprenda Layout com CSS</a></p>
             <p><a href="https://github.com/braziljs/eloquente-javascript">Livro: JavaScript Eloquente</a></p>
             <p><a href="http://stack.desenvolvedor.expert/">Full Stack JS</a></p>
-            <p><a href="https://developer.mozilla.org/pt-BR/docs/Web"></a>MDN Docs</p>
+            <p><a href="https://developer.mozilla.org/pt-BR/docs/Web">MDN Docs</a></p>
             <p><a href="https://www.tutorialspoint.com/tutorialslibrary.htm">Tutoriais Diversos (Inglês)</a></p>
             <p><a href="https://www.freecodecamp.org/">Free Code Camp (Inglês)</a></p>
-            <p><a href="https://www.codecademy.com"></a>Codecademy (Inglês)</p>
+            <p><a href="https://www.codecademy.com">Codecademy (Inglês)</a></p>
 
         </article>
     </main>
