--- a/aula7.html
+++ b/aula7.html
@@ -32,9 +32,9 @@
 
             <h3>GitHub</h3>
 
-            <p><a href="https://github.com/" GitHub</a> é um website onde é possível criar repositórios Git online. A vantagem de ter um repositório online é que você pode acessá-lo de qualquer computador conectado a internet. Além disso, se você estiver trabalhando com outras pessoas, elas também podem acessar o repositório.</p>
+            <p><a href="https://github.com/">GitHub</a> é um website onde é possível criar repositórios Git online. A vantagem de ter um repositório online é que você pode acessá-lo de qualquer computador conectado a internet. Além disso, se você estiver trabalhando com outras pessoas, elas também podem acessar o repositório.</p>
 
-            <p>O primeiro passo para começar a usar o GitHub é <a href="https://github.com/join" criar uma conta no site.</a></p>
+            <p>O primeiro passo para começar a usar o GitHub é <a href="https://github.com/join">criar uma conta no site.</a></p>
 
 
             <h3>Criando um novo repositório</h3>
