--- a/aula5.html
+++ b/aula5.html
@@ -236,7 +236,7 @@
 
             <p><strong>8 - </strong>Explique as 3 maneiras de incluir CSS.</p>
             
-            <p><strong>Resposta:</strong> Inline: os estilos são escritos como atributo style de uma tag. Interno: os estilos são escritos dentro da tag &lt;style&gt; que é filha do cabeçalho &lt;head&gt;. Externo: os estilos são escritos em um documento externo com a extensão .css, e esse documento deve ser linkado ao documento HTML com a tag &lt;link&gt;.</p>
+            <p><strong>Resposta:</strong> Inline: os estilos são escritos como atributo style de uma tag. Embutido: os estilos são escritos dentro da tag &lt;style&gt; que é filha do cabeçalho &lt;head&gt;. Externo: os estilos são escritos em um documento externo com a extensão .css, e esse documento deve ser linkado ao documento HTML com a tag &lt;link&gt;.</p>
 
             <p><strong>9 - </strong>Explique os 4 tipos de seletores CSS vistos em aula.</p>
             
