--- a/aula1.html
+++ b/aula1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Novotec - Criação de Sites e Plataformas Digitais</title>
+    <title>Aula 1 - A Web</title>
     <link rel="stylesheet" href="./src/css/style.css">
 </head>
 <body>
