--- a/aula10.html
+++ b/aula10.html
@@ -230,7 +230,7 @@
 
             <h3>position: sticky;</h3>
 
-            <p>Quando usamos position: sticky; é como se o elemento atera-se entre position: relative; e position: fixed. Ou seja, ele começa posicionado em relação a sua posição "original", e quando o usuário rola o site para baixo o elemento se fixa naquela posição. Veja o exemplo para entender melhor:</p>
+            <p>Quando usamos position: sticky; é como se o elemento altera-se entre position: relative; e position: fixed. Ou seja, ele começa posicionado em relação a sua posição "original", e quando o usuário rola o site para baixo o elemento se fixa naquela posição. Veja o exemplo para entender melhor:</p>
 
             <p>No arquivo style.css:</p>
             
