--- a/aula11.html
+++ b/aula11.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Novotec - Criação de Sites e Plataformas Digitais</title>
+    <title>Aula 11 - Seletores</title>
     <link rel="stylesheet" href="./src/css/style.css">
 </head>
 <body>
@@ -19,7 +19,7 @@
     <main>
         <article>
 
-            <h2>Seletores</h2>
+            <h2>Aula 11 - Seletores</h2>
 
             <p>Na aula 4 já vimos 4 tipos de seletores: tag, id, class e universal. Vamos relembrá-los rapidamente.</p>
 
