--- a/aula16.html
+++ b/aula16.html
@@ -72,7 +72,7 @@
             <pre>
                 <code>
                     body{
-                        background-image: url(https://i.imgur.com/jy775z2.png) url(https://i.imgur.com/X8ywn07.png);
+                        background-image: url(https://i.imgur.com/jy775z2.png), url(https://i.imgur.com/X8ywn07.png);
 
                         background-repeat: repeat-x, no-repeat;
 
