--- a/aula17.html
+++ b/aula17.html
@@ -46,6 +46,7 @@
             <pre>
                 <code>
                     &lt;div&gt;Olá Mundo!&lt;/div&gt;
+                </code>
             </pre>
 
             <p>Mude os valores e veja o que acontece.</p>
@@ -72,6 +73,7 @@
             <pre>
                 <code>
                     &lt;div&gt;Olá Mundo!&lt;/div&gt;
+                </code>
             </pre>
 
             <p>Repare que para usamos dois transforms nesse exemplo: translate e rotate. Para isso basta separar os dois com um espaço. Podemos fazer isso para usar diversos valores de transform em um mesmo elemento.</p>
@@ -101,6 +103,7 @@
             <pre>
                 <code>
                     &lt;div&gt;Olá Mundo!&lt;/div&gt;
+                </code>
             </pre>
 
             <p>No exemplo temos uma div com 300px de altura e largura (ou seja um quadrado), mas usamos scale para deixar a largura 0.5 vezes a largura original, ou seja, metade do valor original, resultando em 150px. E usamos 2 na escala vertical, deixando a altura com o dobro do original, ou seja, 600px. Repare que usamos um translate também para mover a div um pouco para baixo, se você retirar esse translate perceberá que parte da div ficará "para fora" da tela. Isso é porque as transformações são realizadas em relação ao centro do elemento. Então nesse caso quando aumentamos a altura de 300px para 600px, o elemento aumentou 150px para cima e 150px para baixo.</p>
@@ -127,6 +130,7 @@
             <pre>
                 <code>
                     &lt;div&gt;Olá Mundo!&lt;/div&gt;
+                </code>
             </pre>
 
             <p>Mude os valores, tente usar valores negativos, tente usar 0 em dos valores, veja o que acontece.</p>
