--- a/aula18.html
+++ b/aula18.html
@@ -46,6 +46,7 @@
             <pre>
                 <code>
                     &lt;div&gt;Passe o mouse aqui!&lt;/div&gt;
+                </code>
             </pre>
 
             <p>Repare que quando colocamos o mouse sobre a div ela gira instantaneamente. Não seria mais agradável se ela girasse aos poucos? É isso que faremos com transition.</p>
@@ -97,6 +98,7 @@
             <pre>
                 <code>
                     &lt;div&gt;Passe o mouse aqui!&lt;/div&gt;
+                </code>
             </pre>
 
             <p>Passe um tempo brincando com os valores, mude-os, experimente novos valores, mude outras propriedades. Use sua criatividade.</p>
@@ -138,6 +140,7 @@
             <pre>
                 <code>
                     &lt;div&gt;Passe o mouse aqui!&lt;/div&gt;
+                </code>
             </pre>
 
             <p>Repare em 3 coisas importante aqui:</p>
