--- a/aula19.html
+++ b/aula19.html
@@ -77,6 +77,7 @@
             <pre>
                 <code>
                     &lt;h1&gt;Texto animado!&lt;/h1&gt;
+                </code>
             </pre>
 
             <p>Repare que a animação aconteceu uma vez apenas e após ela o texto voltou a ser preto (a cor padrão) de uma vez. Geralmente queremos que o elemento permaneça com o estilo do final da animação, veremos como fazer isso. Veremos também como fazer a animação repetir várias vezes, ou até infinitamente.</p>
@@ -106,6 +107,7 @@
             <pre>
                 <code>
                     &lt;h1&gt;Texto animado!&lt;/h1&gt;
+                </code>
             </pre>
 
             <p>Repare que o início da animação é 0% e o final é 100%. E entre esses dois valores podemos adicionar quantos quisermos.</p>
@@ -138,6 +140,7 @@
             <pre>
                 <code>
                     &lt;h1&gt;Texto animado!&lt;/h1&gt;
+                </code>
             </pre>
 
             <p>Percebeu como demorou um pouco para a animação começar? Mude o valor e veja o que acontece. O que acontece se usarmos um valor negativo? Qual o valor padrão dessa popriedade?</p>
@@ -168,6 +171,7 @@
             <pre>
                 <code>
                     &lt;h1&gt;Texto animado!&lt;/h1&gt;
+                </code>
             </pre>
 
             <p>Repare que a animação se repetiu 3 vezes e depois parou. Mude o valor e veja o que acontece. O que acontece se usarmos um valor infinite? Qual o valor padrão dessa popriedade?</p>
@@ -199,6 +203,7 @@
             <pre>
                 <code>
                     &lt;h1&gt;Texto animado!&lt;/h1&gt;
+                </code>
             </pre>
 
             <p>Altere o valor para os outros valores possíveis e veja o que acontece.</p>
@@ -232,6 +237,7 @@
             <pre>
                 <code>
                     &lt;h1&gt;Texto animado!&lt;/h1&gt;
+                </code>
             </pre>
 
             <p>Mude o valor de animation-fill-mode no exemplo para os outros valores possíveis e veja a diferença.</p>
@@ -320,7 +326,6 @@
             </pre>
 
             <p>Também podemos omitir valores que desejamos deixar como padrão.</p>
-
 
         </article>
     </main>
